Fixed text wrap bug

--- a/src/containers/lithiumHood.module.css
+++ b/src/containers/lithiumHood.module.css
@@ -191,6 +191,7 @@ a {
     width: 900px;
     box-shadow: 0 0 0 1px black;
     margin-bottom: 10px;
+    padding: 10px 15px;
 }
 
 .lithiumRoom:hover {
@@ -199,10 +200,7 @@ a {
 }
 
 .lithiumRoomName {
-    position: relative;
     width: fit-content;
-    left: 10px;
-    top: 10px;
     font-size: medium;
     font-weight: 600;
 }
@@ -211,26 +209,24 @@ a {
     width: 100%;
     font-size: medium;
     font-weight: 400;
+    display: flex;
+    justify-content: space-between;
+    margin-top:10px;
 }
 
 .lithiumRoomInfoLastMessage {
-    margin-top: 20px;
-    max-width: 70%;
-    width: fit-content;
+    max-width: 80%;
     font-size: medium;
+    width: 100%;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     font-weight: 300;
-    position: relative;
-    left: 20px;
-    float: left;
 }
 
 .lithiumRoomInfoLastMessageTime {
-    margin-top: 20px;
-    max-width: 30%;
     width: fit-content;
     font-size: medium;
     font-weight: 300;
-    position: relative;
-    right: 20px;
-    float: right;
-}
+    }
